# 42SH

./: README.md  meson.build
src/: main.c
src/aliasmap/: aliasmap.c  aliasmap.h  meson.build
src/ast/: ast.h  ast_destroy.c  ast_dup.c  ast_init.c  ast_print.c  meson.build
src/builtin/: alias.c  builtin.c  builtin.h  cd.c  dot.c  echo.c  exit.c  export.c  meson.build  unalias.c  unset.c
src/error_msg/: error_msg.c  error_msg.h  meson.build
src/exec/: exec.c  exec.h  meson.build
src/expansion/: expansion.c  expansion.h  meson.build
src/funcmap/: funcmap.c  funcmap.h  meson.build
src/io/: io.c  io.h  meson.build
src/lexer/: .lexer.c.swp  lexer.c  lexer.h  meson.build
src/log/: log.c  log.h  meson.build
src/parser/: meson.build  parser.c  parser.h
src/run/: meson.build  run.c  run.h
src/string_t/: meson.build  string_t.c  string_t.h
src/token/: meson.build  token.c  token.h
src/varmap/: meson.build  special_vars.c  special_vars.h  varmap.c  varmap.h
src/vector/: meson.build  vector.c  vector.h
tests/: clang.sh  compile.sh  test.sh
tests/step1/comments/: com1.in  com2.in  com4.in  com5.out  com6.in  com7.in  com7.out  com8.in  com8.out
tests/step1/echo/: echo01.in  echo02.in  echo02.out  echo03.in  echo03.out  echo04.in  echo04.out  echo05.in  echo06.in  echo06.out  echo07.in  echo07.out  echo08.in  echo08.out  echo09.in  echo09.out  echo10.in  echo11.in  echo12.in  echo12.out  echo13.in  echo14.out  echo15.in  echo15.out  echo16.in  echo16.out
tests/step1/if_cmd/: if01.in  if02.in  if03.in  if04.in  if05.in  if05.out  if06.in  if09.in  (+20 more)
(+225 files in other folders)
